# record-controlled-work-api/open-api-specification.yml
@@ -105,6 +105,41 @@ paths:
         '500':
           description: Internal server error
 
+  /api/v1/applications/{id}/evidence:
+    put:
+      tags:
+        - applications
+      summary: Update the evidence data for an application
+      operationId: updateApplicationEvidence
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UpdateEvidenceRequestBody"
+      responses:
+        '204':
+          description: 'Application evidence data updated successfully'
+        '400':
+          description: 'Bad request'
+        '401':
+          description: 'Unauthorized'
+        '403':
+          description: 'Forbidden'
+        '404':
+          description: 'Not found'
+        '409':
+          description: 'Conflict'
+        '500':
+          description: 'Internal server error'
+
   /api/v1/applications/{id}/means:
     put:
       tags:
@@ -397,6 +432,18 @@ components:
           format: date-time
         modifiedBy:
           type: string
+
+    UpdateEvidenceRequestBody:
+      type: object
+      properties:
+        evidenceExemptionCode:
+          type: string
+        evidenceExemptionReason:
+          type: string
+        incomeEvidenceChecklist:
+          type: object
+        expenditureCapitalEvidenceChecklist:
+          type: object
 
     UpdateMeansDataRequestBody:
       type: object
