# record-controlled-work-service/src/main/java/uk/gov/justice/laa/rcw/controller/ApplicationController.java
@@ -13,8 +13,10 @@ import uk.gov.justice.laa.rcw.model.ApplicationOverview;
 import uk.gov.justice.laa.rcw.model.ApplicationState;
 import uk.gov.justice.laa.rcw.model.CreateApplicationRequestBody;
 import uk.gov.justice.laa.rcw.model.CreateApplicationResponseBody;
+import uk.gov.justice.laa.rcw.model.UpdateEvidenceRequestBody;
 import uk.gov.justice.laa.rcw.model.UpdateMeansDataRequestBody;
 import uk.gov.justice.laa.rcw.service.ApplicationCreationService;
+import uk.gov.justice.laa.rcw.service.ApplicationEvidenceService;
 import uk.gov.justice.laa.rcw.service.ApplicationMeansService;
 import uk.gov.justice.laa.rcw.service.ApplicationQueryService;
 
@@ -25,6 +27,7 @@ public class ApplicationController implements ApplicationsApi {
 
   private final ApplicationQueryService applicationQueryService;
   private final ApplicationMeansService applicationMeansService;
+  private final ApplicationEvidenceService applicationEvidenceService;
   private final ApplicationCreationService applicationCreationService;
 
   @Override
@@ -59,6 +62,13 @@ public class ApplicationController implements ApplicationsApi {
       UUID id, UpdateMeansDataRequestBody updateMeansDataRequestBody) {
     applicationMeansService.updateMeans(
         id, updateMeansDataRequestBody.getData(), updateMeansDataRequestBody.getResult());
+    return ResponseEntity.noContent().build();
+  }
+
+  @Override
+  public ResponseEntity<Void> updateApplicationEvidence(
+      UUID id, UpdateEvidenceRequestBody updateEvidenceRequestBody) {
+    applicationEvidenceService.updateEvidence(id, updateEvidenceRequestBody);
     return ResponseEntity.noContent().build();
   }
 }
